--- a/cmake/HindsightCANConfig.cmake.in
+++ b/cmake/HindsightCANConfig.cmake.in
@@ -6,5 +6,5 @@ if(NOT TARGET HindsightCAN::HindsightCAN)
     # Provide path for scripts
     list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
 
-    include(${CMAKE_CURRENT_LIST_DIR}/HindsightCANConfig.cmake)
+    include(${CMAKE_CURRENT_LIST_DIR}/HindsightCANTargets.cmake)
 endif()
